--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "antd": "^3.19.3",
     "axios": "^0.19.0",
     "date-fns": "^1.30.1",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "echarts": "^4.2.1",
+    "echarts-for-react": "^2.0.15-beta.0",
+    "html-to-draftjs": "^1.4.0",
     "jsonp": "^0.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-draft-wysiwyg": "^1.13.2",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "store": "^2.0.12"
   },
   "scripts": {
@@ -39,7 +48,8 @@
     "customize-cra": "^0.2.13",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
-    "react-app-rewired": "^2.1.3"
+    "react-app-rewired": "^2.1.3",
+    "redux-devtools-extension": "^2.13.8"
   },
   "proxy": "http://localhost:5000"
 }
